# nicegui-small-dieting

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
nicegui_small_dieting/: Dockerfile  README.md  main.py  requirements.txt
nicegui_small_dieting/db/: supabase_utilities.py
nicegui_small_dieting/src/content/: nutrition_records_content.py  training_content.py
nicegui_small_dieting/src/db/: supabase_utilities.py
nicegui_small_dieting/src/util/: datetime_related_func.py  scraping.py
